--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>About me!</title>
 </head>
 <body>
-    <h1>Hruday Ranajn</h1>
+    <h1>Hruday Ranjan</h1>
     <p>I'm from Balasore , Odisha..</p>
 </body>
 </html>
