--- a/Vishal/Assignment 1.html
+++ b/Vishal/Assignment 1.html
@@ -3,11 +3,11 @@
         <title>Assignent</title>
     </head>
     <body>
-         <p><small></small>Que 1 : Write a HTML prog to get the following output:</small></p>
-         <h1><br>HTML</br></h1>
+         <p>Que 1 : Write a HTML prog to get the following output:</p>
+         <h1>HTML</h1>
          <h3><b>Introduction</b></h3>
          <h4>HTML is a standard markup language for Web Pages.</h4>
-         <p><small></small>Que 2 : Write a HTML prog to get the following output:</small></p>
+         <p>Que 2 : Write a HTML prog to get the following output:</p>
          <h1>HTML</h1>
          <h3><b>Introduction</b></h3>
          <h4>HTML is a standard markup language for Web Pages.</h4>
@@ -15,8 +15,8 @@
          <h4>Notepad or TextEdit.</h4>
          <h5>Web pages can be created and modified by using professional HTML editors.
             However, for learning HTML we recommend a simple text editor like Notepad (PC) or TextEdit (Mac).</h5>
-         <p><small></small>Que 3 : Write a HTML prog to get the following output:</small></p>
-         <h1><br>HTML</br></h1>
+         <p>Que 3 : Write a HTML prog to get the following output:</p>
+         <h1>HTML</h1>
          <h3><b>Introduction</b></h3>
          <h4>HTML is a standard markup language for Web Pages.</h4>
             <hr>
@@ -24,6 +24,6 @@
          <h4>Notepad or TextEdit.</h4>
          <h5>Web pages can be created and modified by using professional HTML editors.
                However, for learning HTML we recommend a simple text editor like Notepad (PC) or TextEdit (Mac).</h5>
-         <p><small></small>Que 4 : Write a HTML prog to get the following output:</small></p>
+         <p>Que 4 : Write a HTML prog to get the following output:</p>
             </body>
 </html>
