--- a/Assignment/assignment1.html
+++ b/Assignment/assignment1.html
@@ -1,2 +1,10 @@
-my first assignment
-^C
+<html>
+    <head>
+        <title>HTML Program</title>
+    </head>
+    <body>
+        <h1>HTML</h1>
+        <h2>Introduction</h2>
+        <p>HTML is standard markup language for Web Pages.</p>
+    </body>
+</html>
