added 1 line in Answer4

--- a/Preeti/assignment1/Answer4.htm
+++ b/Preeti/assignment1/Answer4.htm
@@ -8,6 +8,7 @@
             <p>My name is Preeti Tiwari.<br>
             I live in New Delhi.<br>
             I have completed my B.Tech from BBDNIIT, Lucknow<br>
+            I like playing UNO.
         </p>
             </body>
 </html>
