--- a/Rajashree/ass1q2.html
+++ b/Rajashree/ass1q2.html
@@ -10,7 +10,7 @@
 <h3> Notepad or TexEditor.</h3>
 <h4><pre> Web pages can be created and modified by using professional HTML editors.
 <br>However,for learing HTML we recommend a simple text like Notepad(PC) or TextEdit(Mac).
-	</pre>
-</h4>
+	</pre></h4>
+
 </body>
 </html>
