--- a/Rajashree/ass1q1.html
+++ b/Rajashree/ass1q1.html
@@ -5,7 +5,7 @@
 <body>
 <h1> HTML</h1>
 <h2> Introduction</h2>
-<h3><pre> HTML is a standard markup language for Web pages</h3></pre>
+<h3><pre> HTML is a standard markup language for Web pages</pre></h3>
 </body>
 </html>
 
