--- a/Rajashree/ass1q3.html
+++ b/Rajashree/ass1q3.html
@@ -11,7 +11,7 @@
 <h3> Notepad or TexEditor.</h3>
 <h4><pre> Web pages can be created and modified by using professional HTML editors.
 <br>However,for learing HTML we recommend a simple text like Notepad(PC) or TextEdit(Mac).
-</h4></pre>
+	</pre></h4>
 
 </body>
 </html>
