added html assignment

--- a/pradip/assingment2style.html
+++ b/pradip/assingment2style.html
@@ -20,6 +20,6 @@
         <p>Google's initial offering(IPO) took place five year later, on 19th august 2004.<br>
         At the time Larry Page,Segey Brin,and Eric Schmit agreed to work together at Google for<del>30</del><ins>20</ins>years,
     until the year 2024 </p>
-    <h2 style="text-align: center; color: green;"><marquee behavior ="alternate" direction="left">Thank You!!</marquee></h2>
+    <h2 style="text-align: center; color:brown;"><marquee behavior ="alternate" direction="left">Thank You!!</marquee></h2>
         </body>
 </html>
