--- a/biswajit/assn2_biswajit_Q1.html
+++ b/biswajit/assn2_biswajit_Q1.html
@@ -5,7 +5,7 @@
 </head>
 <body style="background-color: rgb(217, 94, 78);">
 	<h1 style="text-align: center;">Google</h1>
-	<h6><em>This article is about the company.</em></h6>
+	<small><em>This article is about the company.</em></small>
 	<h3>From the garage to the Googleplex</h3>
 	<p>
 		The Google story begins in 1995 at <strong><em>Stanford University</em></strong>.
@@ -19,16 +19,16 @@
 		individual pages on the <strong style="color: blue;">World Wide Web</strong> .
 	</p>
 	<p>
-		They called this search engine <mark style="background-color: lightblue">Backrub</mark>.
+		They called this search engine <mark style="background-color: skyblue">Backrub</mark>.
 	</p>
 	<hr>
 	<h3>Initial public offering</h3>
 	<p>
-		Google's initial public offering (IPO) took place five years later, on 19th August 2004.
+		Google's initial public offering (IPO) took place five years later, on 19<sup>th</sup> August 2004.
 		<br>
 		At that time Larry Page, Sergey Brin, and Eric Schmidt agreed to work together at Google for <del>30</del> <ins>20</ins>
 		years, until the year 2024.
 	</p>
-	<h3 style="color: green; text-align: center;">Thank You!!</h3>
+	<marquee behavior="alternate" direction="right"><h3 style="color: green; text-align: center;">Thank You!!</h3></marquee>
 </body>
 </html>
