--- a/first.html
+++ b/first.html
@@ -1,14 +1,38 @@
 <!DOCTYPE html>
 <html>
-<head > 
-<title>file1</title>
-<body style="background-color: burlywood;">
-<h1>HTML</h1>
-<h3>Introduction</h3>
-<p>
-HTML is a standard markup language for Web Pages.
-</p>
-</body>
-</head>
+    <head>
+        <title>
+            First Question
+        </title>
+        <body style="background-color:linen;">
+            <h1 style="text-align: center;">Google</h1>
+            <em>
+                <small>This article is about the company.</small>
+            </em>
+            <h2>
+                From the garage to the Googleplex.
+            </h2>
+            <p>
+                The Google story begins in 1995 at <strong>Stanford University</strong>.<br>
+               <strong><i> Larry Page</i></strong> was considering Stanford for grad school and <strong><i>Sergey Brin</i></strong>, a student
+                there, was assigned to show him around.
+            </p>
+            <small>
+                By some accounts, they disagreed about nearly everything during that first meeting, but by the following
+                year they struck a <mark>parternship</mark>.<br>
+                Working from their dorm rooms, they built a search engine that used links to determine the importance of
+                individual pages on the <bold style="color:red;">World Wide Web</bold> .<br>
+                They called this search engine <i style="background-color: yellowgreen;">Backrub</i>.<hr>
+            </small>
+            <h2>Initial public offering</h2>
+             <p>
+                Google's initial public offering (IPO) took place five years later, on 19<sup>th</sup> 2004.<br>
+                At that time Larry Page, Sergey Brin, and Eric Schmidt agreed to work together at Google for <del>30</del> <ins>20</ins>
+                years, until the year 2024.
+             </p>
+             <p style="text-align: center;">
+                <b style="color:green;"> Thank You!!</b>
+             </p>
+        </body>
+    </head>
 </html>
-
